--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
       <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
     </head>
     <body>
-    <h2>Privacy Policy</h2> <p> Brad Lee built the Emergency Imaging app as a Free app. This SERVICE is provided by
-                    Brad Lee at no cost and is intended for use as is.
+    <h2>Privacy Policy</h2> <p> Dr. Rick Pescatore built the Emergency Imaging app as a Free app. This SERVICE is provided by
+                    Dr. Rick Pescatore at no cost and is intended for use as is.
                   </p> <p>This page is used to inform visitors regarding my policies with the collection, use, and disclosure
                     of Personal Information if anyone decided to use my Service.
                   </p> <p>If you choose to use my Service, then you agree to the collection and use of information in
@@ -52,7 +52,7 @@
                     this page periodically for any changes. I will notify you of any changes by posting
                     the new Privacy Policy on this page. These changes are effective immediately after they are posted on
                     this page.
-                  </p> <p><strong>Contact Us</strong></p> <p>If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact
+                  </p> <p><strong>Support Contact Information</strong></p> <p>If you have any questions or need support, do not hesitate to contact
                     me at <a href="mailto:emergencyimagingapp@gmail.com">emergencyimagingapp@gmail.com</a>.
                   </p>
     </body>
